# Tritonazer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/diagrams/: entities.puml
scripts/: check_commit_msg.py
src/tritonazer/entities/: enumerations.py  model_config.pyi  tensor_config.py  tensor_config.pyi
tests/entities/: test_enumerations.py  test_tensor_config.py
