[project]
name = "tritonazer"
version = "0.1.0"
description = "Lib to simplify work with Python backend of Nvidia Triton Server"
authors = [
    {name = "EvgrafovMichail",email = "evgrafovmd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.14.1"
pytest = "==8.3.4"

