[project]
name = "tritonazer"
version = "0.1.0"
description = "Lib to simplify work with Python backend of Nvidia Triton Server"
authors = [
    {name = "EvgrafovMichail",email = "evgrafovmd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.14.1"
pytest = "==8.3.4"
ruff = "==0.9.1"
pre-commit = "==4.0.1"


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
]
extend-exclude = ["*.ipynb"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
